--- a/index.html
+++ b/index.html
@@ -8,29 +8,32 @@
 </head>
 <body>
     <div class="top-of-header">
-        <ul class="head-top-list">
-            <li><a href="">Program Finder</a></li>
-            <li><a href="">Blog</a></li>
+        <ul class="top-head">
+            <li class="header-top-list"><a href="">Program Finder</a></li>
+            <li class="header-top-list"><a href="">Blog</a></li>
         </ul>
     </div>
     <hr>
     <header>
-        <div class="logo">
-            <img class="logo-img" src="images/fullstack.jpg" alt="">
-        </div>
-        <div class="navbar">
-            <ul class="nav-list">
-                <li><a href="">PROGRAMS</a></li>
-                <li><a href="">PREP COURSES</a></li>
-                <li><a href="">ADMISSIONS</a></li>
-                <li><a href="">TUTIONS & DATES</a></li>
-                <li><a href="">WHY FULLSTACK</a></li>
-                <li><a href="">ABOUT</a></li>
-            </ul>
-        </div>
-        <div class="login">
-            <button class="signup">SIGN UP</button>
-            <button class="apply">APPLY</button>
+        <div class="header">
+            <button class="logo">
+                <img class="logo-img" src="images/fullstack.jpg" alt="">
+                <h1 class="comp-name">Fullstack Academy</h1>
+            </button>
+            <div class="navbar">
+                <ul>
+                    <li class="nav-list"><a href=""><button class="nav-button-1">PROGRAMS</button></a></li>
+                    <li class="nav-list"><a href=""><button class="nav-button-2">PREP COURSES</button></a></li>
+                    <li class="nav-list"><a href=""><button class="nav-button-3">ADMISSIONS</button></a></li>
+                    <li class="nav-list"><a href="">TUTIONS & DATES</a></li>
+                    <li class="nav-list"><a href="">WHY FULLSTACK</a></li>
+                    <li class="nav-list"><a href="">ABOUT</a></li>
+                </ul>
+            </div>
+            <div class="login">
+                <button class="signup">SIGN UP</button>
+                <button class="apply">APPLY</button>
+            </div>
         </div>
     </header>
     
