--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             </button>
             <div class="navbar">
                 <ul>
-                    <li class="nav-list"><a href=""><button class="nav-button-1">PROGRAMS</button></a></li>
-                    <li class="nav-list"><a href=""><button class="nav-button-2">PREP COURSES</button></a></li>
-                    <li class="nav-list"><a href=""><button class="nav-button-3">ADMISSIONS</button></a></li>
-                    <li class="nav-list"><a href="">TUTIONS & DATES</a></li>
-                    <li class="nav-list"><a href="">WHY FULLSTACK</a></li>
-                    <li class="nav-list"><a href="">ABOUT</a></li>
+                    <li><button class="nav-button">PROGRAMS</button></li>
+                    <li><button class="nav-button">PREP COURSES</button></li>
+                    <li><button class="nav-button">ADMISSIONS</button></li>
+                    <li><button class="nav-button">TUTIONS & DATES</button></li>
+                    <li><button class="nav-button">WHY FULLSTACK</button></li>
+                    <li><button class="nav-button">ABOUT</button></li>
                 </ul>
             </div>
             <div class="login">
@@ -36,6 +36,15 @@
             </div>
         </div>
     </header>
+
+    <div class="container">
+        <div class="make-your-move">
+            <h1>Make Your Move</h1>
+            <p>Take the first step towards a thriving career in tech with Fullstack Academy. Fullstack bootcamp grads get hired at companies like Google,
+                Amazon and Facebook.
+            </p>
+        </div>
+    </div>
     
 </body>
 </html>
