Last commit for the day

--- a/index.html
+++ b/index.html
@@ -16,33 +16,40 @@
     <hr>
     <header>
         <div class="header">
-            <button class="logo">
-                <img class="logo-img" src="images/fullstack.jpg" alt="">
-                <h1 class="comp-name">Fullstack Academy</h1>
-            </button>
+            <a href="index.html">
+                <button class="logo">
+                    <img class="logo-img" src="images/fullstack.jpg" alt="">
+                    <h1 class="comp-name">Fullstack Academy</h1>
+                </button>
+            </a>
             <div class="navbar">
                 <ul>
-                    <li><button class="nav-button">PROGRAMS</button></li>
-                    <li><button class="nav-button">PREP COURSES</button></li>
-                    <li><button class="nav-button">ADMISSIONS</button></li>
-                    <li><button class="nav-button">TUTIONS & DATES</button></li>
-                    <li><button class="nav-button">WHY FULLSTACK</button></li>
-                    <li><button class="nav-button">ABOUT</button></li>
+                    <li><a href=""><button class="nav-button">PROGRAMS</button></a></li>
+                    <li><a href=""><button class="nav-button">PREP COURSES</button></a></li>
+                    <li><a href=""><button class="nav-button">ADMISSIONS</button></a></li>
+                    <li><a href=""><button class="nav-button">TUTIONS & DATES</button></a></li>
+                    <li><a href=""><button class="nav-button">WHY FULLSTACK</button></a></li>
+                    <li><a href=""><button class="nav-button">ABOUT</button></a></li>
                 </ul>
             </div>
             <div class="login">
-                <button class="signup">SIGN UP</button>
-                <button class="apply">APPLY</button>
+                <a href=""><button class="signup">SIGN UP</button></a>
+                <a href=""><button class="apply">APPLY</button></a>
             </div>
         </div>
     </header>
 
     <div class="container">
-        <div class="make-your-move">
-            <h1>Make Your Move</h1>
-            <p>Take the first step towards a thriving career in tech with Fullstack Academy. Fullstack bootcamp grads get hired at companies like Google,
-                Amazon and Facebook.
-            </p>
+        <div class="inner-container">
+            <div class="make-your-move">
+                <h1>Make Your Move.</h1>
+                <p class="take-the-first-step">Take the first step towards a thriving career in tech with Fullstack Academy. Fullstack bootcamp grads get hired at companies like Google,
+                    Amazon and Facebook.
+                </p>
+            </div>
+        </div>
+        <div class="sec-inner-container">
+            <div class="choose-the-right"></div>
         </div>
     </div>
     
